SERVER: feature - Add MySQL/MariaDB support

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -40,6 +40,7 @@
     "koa": "2.13.4",
     "markdown-it": "13.0.1",
     "mustache": "4.2.0",
+    "mysql": "^2.18.1",
     "nanoid": "2.1.11",
     "node-cron": "3.0.2",
     "node-env-file": "0.1.8",
@@ -68,6 +69,7 @@
     "@types/markdown-it": "12.2.3",
     "@types/mustache": "4.2.2",
     "@types/nodemailer": "6.4.6",
+    "@types/react": "^18.0.25",
     "@types/yargs": "17.0.14",
     "@types/zxcvbn": "4.4.1",
     "gulp": "4.0.2",
